<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculator"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAffichage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/my_calculator"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSuppr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSuppr"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/del"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintStart_toEndOf="@+id/btnReset" />

    <Button
        android:id="@+id/btnIdk"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="idk"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btnSuppr" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIdk" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/times"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDot" />

    <TextView
        android:id="@+id/tvFirstDigit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tvAffichage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tvAffichage"
        app:layout_constraintStart_toEndOf="@+id/tvFirstDigit" />
</androidx.constraintlayout.widget.ConstraintLayout>